--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,4 +20,17 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    androidCompileSdkVersion = 25
+    androidBuildToolsVersion = '25.0.2'
+    androidMinSdkVersion = 14
+    androidTargetSdkVersion = 25
+
+    supportLibraryVersion = '25.3.0'
+    retrofitVersion = '2.1.0'
+    rxJavaVersion = '1.1.9'
+    rxAndroidVersion = '1.2.1'
+    picassoVersion = '2.3.2'
 }
